# curso-pln-2026-1

./: 0_intro.ipynb  1_niveles_linguisticos.ipynb  2_stats_properties.ipynb  3_preprocess.ipynb  README.md  local_llm_apps.ipynb  pyproject.toml
