[project]
name = "curso-pln-2026-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets<2.0.0",
    "gensim>=4.3.3",
    "jupyter-ruff>=0.3.0",
    "jupyterlab>=4.4.6",
    "jupyterlab-rise>=0.43.1",
    "jupyterlab-vim>=4.1.4",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.21",
    "langchain-ollama>=0.3.7",
    "langgraph>=0.6.6",
    "matplotlib>=3.10.6",
    "nltk>=3.9.1",
    "numpy<2.0.0",
    "pandas>=2.3.2",
    "pip>=25.2",
    "scikit-learn>=1.7.1",
    "spacy>=3.8.7",
    "transformers>=4.56.1",
]
